--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,8 @@
                 navigator.serviceWorker.register('./serviceWorker.js')
             })
         }
+        // document.getElementsByTagName("BODY")[0].style.minWidth = null;
+        // document.getElementsByTagName("HTML")[0].style.minWidth = null;
     </script>
 </body>
 
