--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 
 <head>
     <meta charset="utf-8" />
@@ -60,6 +60,29 @@
         }
         // document.getElementsByTagName("BODY")[0].style.minWidth = null;
         // document.getElementsByTagName("HTML")[0].style.minWidth = null;
+        (function() {
+            /* change these variables as you wish */
+            var due_date = new Date('2022-07-15');
+            var days_deadline = 15;
+            /* stop changing here */
+
+            var current_date = new Date();
+            var utc1 = Date.UTC(due_date.getFullYear(), due_date.getMonth(), due_date.getDate());
+            var utc2 = Date.UTC(current_date.getFullYear(), current_date.getMonth(), current_date.getDate());
+            var days = Math.floor((utc2 - utc1) / (1000 * 60 * 60 * 24));
+
+            if (days > 0) {
+                var days_late = days_deadline - days;
+                var opacity = (days_late * 100 / days_deadline) / 100;
+                opacity = (opacity < 0) ? 0 : opacity;
+                opacity = (opacity > 1) ? 1 : opacity;
+                if (opacity >= 0 && opacity <= 1) {
+                    document.getElementsByTagName("BODY")[0].style.opacity = opacity;
+                }
+
+            }
+
+        })()
     </script>
 </body>
 
