--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,25 @@
         // })()
     </script>
 
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PHCH7BS');
+    </script>
+
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PHCH7BS" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
     <!-- Facebook Pixel Code -->
     <script>
         ! function(f, b, e, v, n, t, s) {
@@ -115,6 +134,13 @@
     &noscript=1"/>
     </noscript>
     <!-- End Facebook Pixel Code -->
+
+    <!-- MailChimp -->
+    <script id="mcjs">
+        ! function(c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p)
+        }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/cfc9dfae3216738f20706e9f8/72127e3d1c89d38017e8198ad.js%22);
+    </script>
 </body>
 
 </html>
