--- a/public/index.html
+++ b/public/index.html
@@ -119,8 +119,8 @@
     </script>
 
     <!-- ManyChat -->
-    <script src="//widget.manychat.com/101516665013336.js" defer="defer"></script>
-    <script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
+    <script src="//widget.manychat.com/101516665013336.js" defer></script>
+    <script src="https://mccdn.me/assets/js/widget.js" defer></script>
 
 </body>
 
